[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm>=8"]

[project]
name = "sqlalchemy-dlock"
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "A distributed lock implementation based on SQLAlchemy"
keywords = [
  "SQLAlchemy",
  "lock",
  "distributed",
  "distributed lock",
  "SQL",
  "database",
  "DBMS",
  "RDBMS",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Database :: Front-Ends",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
]
dynamic = ["version"]

# requires python version
requires-python = ">=3.9"
# requires
dependencies = [
  "SQLAlchemy[asyncio]>=1.4.3,<3.0",
  "typing-extensions; python_version<'3.12'",
]
# extra requires
[project.optional-dependencies]
# MySQL
mysqlclient = ["mysqlclient"]
pymysql = ["pymysql"]
# MySQL asyncio
aiomysql = ["aiomysql"]
# MSSQL
pyodbc = ["pyodbc"]
pymssql = ["pymssql"]
# MSSQL asyncio
aioodbc = ["aioodbc"]
# Oracle
oracledb = ["oracledb>=2.0"]  # Official driver, recommended
cx_oracle = ["cx_Oracle>=8.3"]  # Legacy driver
# Postgres
# psycopg2: sync
psycopg2 = ["psycopg2>=2.8"] # psycopg2 compiling needed when install
psycopg2-binary = [
  "psycopg2-binary>=2.8",
] # psycopg2 with pre-compiled C library
# psycopg3: both sync and asyncio
psycopg3 = ["psycopg"] # psycopg3 dynamik link to libpq
psycopg3-binary = ["psycopg[binary]"] # psycopg3 with pre-compiled C library
psycopg3-c = ["psycopg[c]",] # psycopg3 compiling needed when install
# Postgres asyncio
asyncpg = ["asyncpg"]

# Project links
[project.urls]
homepage = "https://github.com/tanbro/sqlalchemy-dlock"
source = "https://github.com/tanbro/sqlalchemy-dlock.git"
documentation = "https://sqlalchemy-dlock.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/sqlalchemy_dlock/_version.py"

[dependency-groups]
dev = [
  { include-group = "typed" },
  { include-group = "test" },
  { include-group = "docs" },
]
docs = [
  "sphinx>=7",
  "furo",
  "linkify-it-py",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-tippy",
  "sphinx-version-warning",
  "sphinx-autodoc-typehints",
]
typed = ["mypy"]
test = ["coverage", "python-dotenv"]
ipy = ["ipykernel"]


[tool.setuptools.package-data]
sqlalchemy_dlock = ["sqlalchemy_dlock/py.typed"]
