[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm>=8"]

[project]
name = "sqlalchemy-dlock"
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "A distributed lock implementation based on SQLAlchemy"
keywords = [
  "SQLAlchemy",
  "lock",
  "distributed",
  "distributed lock",
  "SQL",
  "database",
  "DBMS",
  "RDBMS",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Database :: Front-Ends",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
]
dynamic = ["version"]

# requires python version
requires-python = ">=3.9"
# requires
dependencies = [
  "SQLAlchemy[asyncio]>=1.4.3,<3.0",
  "typing-extensions; python_version<'3.12'",
]

# Project links
[project.urls]
homepage = "https://github.com/tanbro/sqlalchemy-dlock"
source = "https://github.com/tanbro/sqlalchemy-dlock.git"
documentation = "https://sqlalchemy-dlock.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/sqlalchemy_dlock/_version.py"

[dependency-groups]
dev = [
  { include-group = "typecheck" },
  { include-group = "test" },
  { include-group = "docs" },
]
docs = [
  "sphinx>=7",
  "furo",
  "linkify-it-py",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-tippy",
  "sphinx-version-warning",
  "sphinx-autodoc-typehints",
]
typecheck = ["mypy"]
test = ["coverage", "python-dotenv"]
ipy = ["ipykernel"]


[tool.setuptools.package-data]
sqlalchemy_dlock = ["sqlalchemy_dlock/py.typed"]
