[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80", "setuptools-scm>=8"]

[project]
name = "sqlalchemy-dlock"
readme = { file = 'README.md', content-type = 'text/markdown' }
authors = [{ name = "liu xue yan", email = "liu_xue_yan@foxmail.com" }]
description = "Distributed lock implementation based on SQLAlchemy with support for MySQL, PostgreSQL, MSSQL, and Oracle"
keywords = [
  "sqlalchemy",
  "distributed lock",
  "database lock",
  "advisory lock",
  "named lock",
  "application lock",
  "mysql",
  "postgresql",
  "mssql",
  "sqlserver",
  "oracle",
  "mariadb",
  "async",
  "concurrency",
  "mutex",
  "synchronization",
  "threading",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Front-Ends",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dynamic = ["version"]

# requires python version
requires-python = ">=3.9"
# requires
dependencies = [
  "SQLAlchemy[asyncio]>=1.4.3,<3.0",
  "typing-extensions; python_version<'3.12'",
]

# Project links
[project.urls]
homepage = "https://github.com/tanbro/sqlalchemy-dlock"
source = "https://github.com/tanbro/sqlalchemy-dlock.git"
documentation = "https://sqlalchemy-dlock.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/sqlalchemy_dlock/version.py"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "test" },
  { include-group = "typecheck" },
]
docs = [
  "sphinx>=7",
  "furo",
  "linkify-it-py",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-tippy",
  "sphinx-version-warning",
  "sphinx-autodoc-typehints",
]
test = ["coverage", "python-dotenv"]
typecheck = ["mypy"]

[tool.setuptools.package-data]
sqlalchemy_dlock = ["sqlalchemy_dlock/py.typed"]
