[metadata]
name = SQLAlchemy-DLock
description = A distributed lock implementation based on SQLAlchemy
url = https://github.com/tanbro/sqlalchemy-dlock
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = SQLAlchemy, lock, distributed, distributed lock, SQL, database, DBMS
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.5, <4
install_requires =
    SQLAlchemy>=1.0,<2.0
    libscrc>=1.5,<2.0

[options.packages.find]
where = src
