[metadata]
name = sqlalchemy-dlock
description = A distributed lock implementation based on SQLAlchemy
url = https://github.com/tanbro/sqlalchemy-dlock
author = liu xue yan
author_email = liu_xue_yan@foxmail.com
keywords = SQLAlchemy, lock, distributed, distributed lock, SQL, database, DBMS
long_description = file: README.md, CONTRIBUTING.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Topic :: Database :: Front-Ends
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    SQLAlchemy>=1.4,<2.0

[options.packages.find]
where = src

[options.extras_require]
asyncio =
    SQLAlchemy[asyncio]
